	ghc versions that do not support "auto" packages.
	5. Change the install location of gtk2hs.haddock from 
	$(datadir)/doc/gtk2hs/html/ to just $(datadir)/doc/gtk2hs/ to conform
	with the cabal haddock convention.

	* gtk2hs.spec.in: revert to building the GHCi .o files in a
	post-install action and removing them in a uninstall action.

2005-01-17 Duncan Coutts <duncan@coutts.uklinux.net>

	* configure.ac: add an extra option --without-pkgreg to allow
	distributors to install without registering any packages with ghc-pkg.
	Also a fix for the C library deps of the glib package which was
	stopping ghci from loading the glib package (and thus all our other
	packages).

	* Makefile.am: move the register package hook to this file from
	mk/common.mk and make it conditional on the new configure flag. Also
	install all the .pkg files and install ghci .o files for each .a lib.

	* mk/common.mk: the register package hook has moved to Makefile.am

	* gtk2hs.spec.in: update to Jens's latest spec file plus my (probably
	broken) changes. This needs testing.

2005-01-16 Duncan Coutts <duncan@coutts.uklinux.net>

	* demo/buttonbox/ButtonBox.hs demo/buttonbox/Makefile
	demo/concurrent/Progress.hs demo/concurrent/Makefile
	demo/filechooser/FileChooserDemo.hs demo/filechooser/Makefile
	demo/gconf/GConfDemo.hs demo/gconf/Makefile
	demo/glade/GladeTest.hs	demo/glade/Makefile
	demo/graphic/Drawing.hs demo/graphic/Makefile
	demo/hello/Makefile
	demo/mozembed/TestEmbedMoz.hs demo/mozembed/Makefile
	demo/profileviewer/ProfileViewer.hs demo/profileviewer/Makefile
	demo/sourceview/SourceViewTest.hs demo/sourceview/Makefile
	demo/treeList/ListTest.hs demo/treeList/Makefile
	demo/unicode/Arabic.hs demo/unicode/Makefile: update all the demos to
	use the new module names and write new simple makefiles.

	* Makefile.am: build documentation for all packages. Add installcheck
	make target that compiles & links all the demos. Arrange for all the